--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+<html lang="en" class="Theme">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <script src="./index.js" defer></script>
+    <script src="https://kit.fontawesome.com/35eeb04fc4.js" crossorigin="anonymous"></script>
+    <title>The Film Score</title>
+</head>
+<body class="body">
+    <section id="LandingPage">
+        <nav class="NavBar">
+            <div class="Logo">
+                <img src="./assets/Black film score.png" alt="Logo" class="Logo">
+            </div>
+            <div class="NavBar__Links">
+                <a href="./index.html" class="Home-Active">Home</a>
+                <a href="./movies.html" class="SearchYourFilm">Search for movie</a>
+                <button class="ContactButton">Contact</button>
+            </div>
+            <button class="Menu" id="burgerButton">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+            <div class="burger-menu" id="burgerMenu">
+                <a href="./index.html">Home</a>
+                <a href="./movies.html">Search for movie</a>
+                <button class="ContactButton">Contact</button>
+            </div>
+        </nav>
+        <section class="Container">
+        <div class="FirstContainer">
+            <h1 class="FirstHeader">
+            America's most awarded Film streaming platform 
+            </h1>
+            <h2 class="Header2">
+                Discover timeless classics with <span class="ChangeColor">The Film Score</span>
+            </h2>
+            <div class="input-wrapper">
+                <!-- <input type="text" placeholder="Search by Genre, Director or Keyword" class="InputSearch"> -->
+               <!-- <a href="./movies.html"> -->
+            <button class="Loading Not-Loading">
+                   <a href="./movies.html" class="StreamNow">Stream Now</a>
+                    <!-- <i class="fa-solid fa-magnifying-glass"></i> -->
+                </button>
+            <!-- </a> -->
+            </div>
+            <img src="./assets/Audience .png" alt="Film roll" class="FilmRoll">
+        </div>
+    </section>
+    </section>
+</body>
 </html>
